Fixed caption alignment bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ a {
   padding-right: 5vw;
 }
 
-.content > p {
+.content > p *.caption {
   text-align: justify;
   padding-left: 7.5vw;
   padding-right: 7.5vw;
